1.  netty http_server 官网demo

--- a/zxc_netty_web_server/pom.xml
+++ b/zxc_netty_web_server/pom.xml
@@ -9,4 +9,14 @@
     <version>0.1</version>
 
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.51.Final</version>
+        </dependency>
+
+
+    </dependencies>
 </project>
